MarcoKitTests/TestData/error/object1.marcoConfig
--before
foo

--after
0-3: Unexpected end of file
